  * Changed zoom-behaviour (default: Images are scaled, once zoomed: Images are displayed in right aspect-ratio)
  * Fixed broken next/previous article/feed jump when returning from article-view
  * Images are not fetched from online-sources anymore if browsing in Offline-mode
  * Some performance-issues fixed and some background-exceptions too

== Version 0.9.4 ==
  * Reduced permissions as requested by Issue #58 ([https://code.google.com/p/ttrss-reader-fork/issues/detail?id=57 Is "Phone Calls" Permission Necessary?])

== Version 0.9.3 ==
  * Added French translation, thanks Régis
  * Long-press a category to show all articles in this category in one list
  * "Show all articles" now also allows browsing with volume-keys or swiping

== Version 0.9.2 ==
  * ImageCache now started as a service so it doesn't get killed anymore by the system
  * ImageCache accessible in menu of CategoryList, FeedList and FeedHeadlineList
  * Added notification for running downloads, using a grey icon to indicate the difference
  * Fixed DB-Problems which prevented efficient caching

== Version 0.9.1 ==
  * New: Added possibility to send error-reports after a crash
  * New: Removed donators-limitations, everyone can use the ImageCache now
  * New: Added Exit-Button to error-dialog to allow completely exiting the app from the dialog
  * Refurbished the reset of preferences (Preferences -> Menu -> Reset)
  * blog.fefe.de now working (fixed relative links but I am unsure whether I have to use full path to article or just the domain-part. Ideas anyone?)
  * Cleanup of preferences
  * Minor bugfixes

== Version 0.9 ==
  * New: Added check for supported server-version on startup
  * New: Added check for saved crash-report and option to send report by mail
  * Minor changes in network-access, Requests are faster now

== Version 0.8.9 (1) ==
  * New: Added custom title-bar in Article-Display (can be disabled in preferences)
  * New: Added setting to change the display-order of all lists