@@ -4,7 +4,7 @@
     package="org.ttrssreader"
     android:installLocation="auto"
     android:versionName="0.9.5"
-    android:versionCode="950"
+    android:versionCode="951"
 >
 
     <application
