@@ -26,7 +26,9 @@
             \n * Changed zoom-behaviour (default: Images are scaled, once zoomed: Images are displayed in right aspect-ratio)
             \n * Fixed broken next/previous article/feed jump when returning from article-view
             \n * Images are not fetched from online-sources anymore if browsing in Offline-mode
-            \n * Some performance-issues fixed and some background-exceptions too</item>
+            \n * Some performance-issues fixed and some background-exceptions too
+            \n * Show read articles when browsing "only unread articles" and entering an empty feed (eg. by returning from the last unread article)
+            \n * Minor refactoring and changes due to the upcoming release of Tiny Tiny RSS 1.5.3 (POST-Requests, Attachments in getHeadlines)</item>
     
         <item>v0.9.4:
             \n * Reduced permissions as requested by Issue #58</item>
@@ -45,8 +47,7 @@
         <item>v0.9.1:
             \n * Added possibility to send error-reports after a crash
             \n * Removed donators-limitations, everyone can use the ImageCache now
-            \n * blog.fefe.de now working (fixed relative links but I am unsure whether I have to use full path to article or just
-            the domain-part. Ideas anyone?)
+            \n * blog.fefe.de now working (fixed relative links but I am unsure whether I have to use full path to article or just the domain-part. Ideas anyone?)
             \n * Added Exit-Button to error-dialog to allow completely exiting the app from the dialog
             \n * Refurbished the reset of preferences (Preferences -> Menu -> Reset)
             \n * Cleanup of preferences</item>
